name:                threals
version:             0.1.0.0
synopsis:            Threals Calculator
description:         Please see README.md
homepage:            https://github.com/githubuser/atm#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Andersion
maintainer:          nomicflux@gmail.com
copyright:           2017 Michael Anderson
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Threal
                     , Threal.Threals
                     , Threal.Comps
                     , Threal.Show
                     , Threal.ThrealM
                     , Threal.Tests
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 2.2.1
                     , unordered-containers >= 0.2.8.0 && < 0.3
                     , hashable >= 1.2.6.1
